<resources>
    <string name="app_name">ShareButter</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_phone_number">Phone Number</string>
    <string name="login_request_login_pin">Request Login Pin</string>
    <string name="login_or">OR</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_pin_hint">6 Digit Login Pin</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="re_enter_e_mail">Re-enter E-mail</string>
    <string name="submit">Submit</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="login_SignIn">SIGN IN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password ?</string>
    <string name="login_breakline">OR</string>
    <string name="login_signup_msg">Don\'t have an account ?</string>
    <string name="signup_title">SIGN UP</string>
    <string name="signup_username">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_hint_name">John Doe</string>
    <string name="signup_hint_email">johndoe@gmail.com</string>
    <string name="reset_password_title">RESET PASSWORD</string>
    <string name="reset_password_warning_msg">Enter the email address you used to create your account and we will email you a link to reset your password.</string>
    <string name="login_signup_msg2">Join Us Now !</string>
    <string name="profile_about_me">About Me</string>
    <string name="profile_offer_num">14</string>
    <string name="profile_offer_text">Offers</string>
    <string name="profile_likes_num">45</string>
    <string name="profile_likes_text">Likes</string>
    <string name="profile_followers_num">145</string>
    <string name="profile_followers_text">Followers</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_edit_profile_text">Edit Profile</string>
    <string name="profile_username">Yin Ling</string>
    <string name="profile_description">Utarian, studying Information System Engineering. Penang lang.</string>
    <string name="editprofile_done">DONE</string>
    <string name="editprofile_change_photo">Change Photo</string>
    <string name="editprofile_hint_name">Name</string>
    <string name="editprofile_hint_description">Description</string>
    <string name="signin_loadingmsg_please_wait">Please Wait...</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="add_offer_fragment">Add Offer Fragment</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="location_fragment">Location Fragment</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_items">items</string>
    <string name="dbname_chats">chats</string>
    <string name="dbname_trade_offers">trade_offers</string>
    <string name="dbname_message_channels">message_channels</string>
    <string name="logout_confirmation_msg">Are you sure you want to Log Out ?</string>
    <string name="categories_dried_canned_food"><![CDATA[Dried & canned food]]></string>
    <string name="categories_fresh_frozen"><![CDATA[Fresh & Frozen]]></string>
    <string name="categories_beverages">Beverages</string>
    <string name="offers_records">Offers Records</string>
    <string name="all_categories">All Categories</string>
    <string name="dried_canned_food"><![CDATA[Dried & canned food]]></string>
    <string name="fresh_frozen"><![CDATA[Fresh & Frozen]]></string>
    <string name="beverages">Beverages</string>
    <string name="records">Records</string>
    <string name="offer_records">Offer Records</string>
    <string name="view_history">View History</string>
    <string name="field_display_name">display_name</string>
    <string name="field_description">description</string>

    <!--Exchanges-->
    <string name="upload_expired_date_text">Please make sure you had upload your food expired date image</string>
    <string name="expired_date_title">Expired Date:</string>
    <string name="expired_date">10 March 2020</string>
    <string name="description">Chewy fruit candies with a refreshing sour and sweet taste \n 20pcs</string>
    <string name="details_item_name">Lot 100 Sour</string>
    <string name="guide_msg">Kindly leave your contact information.</string>
    <string name="editpro_city">City:</string>
    <string name="editpro_state">State:</string>

    <!--Facebook-->
    <string name="facebook_app_id">661371884296430</string>
    <string name="fb_login_protocol_scheme">fb661371884296430</string>
    <string name="offer_sent">Offer Sent</string>
    <string name="offer_received">Offer Received</string>
    <string name="sender_name">Sender Name</string>
    <string name="receiver_name">Receiver Name</string>

    <!--Google Map-->
    <string name="google_maps_API_key">AIzaSyDhOa94kkDTi4qhGvBt_FfSbMNl22QLC_8</string>
    <string name="location_user_guide">You may find Nursing Home or Recycle Companies \nthat around you.</string>
    <string name="search">SEARCH</string>
    <string name="search_hint">Search here..</string>
    <string name="search_item_name">Lot 100 Sour Mango</string>
    <string name="search_item_hashtag">#Lot100#Mango\n#Sweet</string>
    <string name="congratulations_msg">Congratulations!\nYou have complete your trading!</string>
    <string name="feedback">Feedback</string>
    <string name="rating">Rating</string>
    <string name="message">Message</string>
    <string name="user_trade">Your trade</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>

    <!--One Signal-->
    <string name="one_signal_app_id">fd4c85f0-cf1f-4825-aa2b-542e33e90394</string>
    <string name="one_signal_api_key">NDdhNjA4YTUtNjYxMi00NGMxLTk5YzQtZDJhYmYzM2IxNDAw</string>
    <string name="add_offer_guide">Please make sure you has upload your food expired date image.</string>
    <string name="privatemsg_sample">Hi, I am interested on the Lot100 Mango that you offer.</string>
</resources>
