<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.CategoriesActivity">


    <TextView
        android:id="@+id/header"
        style="@style/LargeTextBold.Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xSmallColumn"
        android:fontFamily="sans-serif-medium"
        android:text="@string/all_categories" />

    <ImageView
        android:id="@+id/redclose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/xSmallColumn"
        app:srcCompat="@drawable/redclose" />

    <RelativeLayout
        android:id="@+id/categories1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LargeColumn"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/xxxSmallColumn"
        android:layout_marginRight="@dimen/xxxSmallColumn"
        android:layout_marginLeft="@dimen/xxxSmallColumn"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_cookies"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_cookies" />

        <TextView
            android:id="@+id/tvdried_canned_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dried_canned_food"
            android:textColor="@color/colorPrimary"
            android:textSize="19.5sp" />

        <ImageView
            android:id="@+id/ic_next"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/arrowright" />
    </RelativeLayout>

    <TextView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories1"
        android:layout_margin="8dp"
        android:background="@color/silver"/>

    <RelativeLayout
        android:id="@+id/categories2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LargeColumn"
        android:layout_below="@+id/divider1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_icecream"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_icecream" />

        <TextView
            android:id="@+id/tvfresh_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fresh_frozen"
            android:textColor="@color/colorPrimary"
            android:textSize="19.5sp" />

        <ImageView
            android:id="@+id/ic_next2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/arrowright" />
    </RelativeLayout>

    <TextView
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories2"
        android:layout_margin="8dp"
        android:background="@color/silver"/>

    <RelativeLayout
        android:id="@+id/categories3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LargeColumn"
        android:layout_below="@+id/divider2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_beercan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/beercan" />

        <TextView
            android:id="@+id/tvbeverages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/beverages"
            android:textColor="@color/colorPrimary"
            android:textSize="19.5sp" />

        <ImageView
            android:id="@+id/ic_next3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/arrowright" />
    </RelativeLayout>

    <TextView
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories3"
        android:layout_margin="@dimen/xxxSmallColumn"
        android:background="@color/silver"/>

    <!--divider-->

    <TextView
        android:id="@+id/header2"
        style="@style/LargeTextBold.Theme"
        android:layout_below="@+id/divider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xSmallColumn"
        android:fontFamily="sans-serif-medium"
        android:text="@string/records" />

    <RelativeLayout
        android:id="@+id/categories4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LargeColumn"
        android:layout_below="@+id/header2"
        android:layout_marginTop="@dimen/xxxSmallColumn"
        android:layout_marginRight="@dimen/xxxSmallColumn"
        android:layout_marginLeft="@dimen/xxxSmallColumn"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_clipboard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_auction1" />

        <TextView
            android:id="@+id/tvOfferRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/offer_records"
            android:textColor="@color/colorPrimary"
            android:textSize="19.5sp" />

        <ImageView
            android:id="@+id/ic_next4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/arrowright" />
    </RelativeLayout>

    <TextView
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories4"
        android:layout_margin="8dp"
        android:background="@color/silver"/>

    <RelativeLayout
        android:id="@+id/categories5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LargeColumn"
        android:layout_below="@+id/divider4"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_checklist"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_clipboard" />

        <TextView
            android:id="@+id/tvview_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/view_history"
            android:textColor="@color/colorPrimary"
            android:textSize="19.5sp" />

        <ImageView
            android:id="@+id/ic_next5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/arrowright" />
    </RelativeLayout>

    <TextView
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories5"
        android:layout_margin="8dp"
        android:background="@color/silver"/>

</RelativeLayout>